--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/heart.png">
-    <script src="js/jokes.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="heart.png">
+    <script src="jokes.js"></script>
     <title>Be Healthy</title>
 </head>
 <body>
@@ -68,7 +68,7 @@
             <button role="button" class="btn" id="search" onclick="recipe()">Search</button>
         </div>
         <div class="food">
-            <img src="img/thali.png">
+            <img src="thali.png">
         </div>
     </section>
     <section class="nutrilitics-results">
@@ -98,9 +98,9 @@
     </section>
     <footer id="footer">
         <div class="social">
-            <a href="https://www.facebook.com/nitesh.sahni.902" target="_blank"><img src="img/facebook.png"></a>
-            <a href="https://www.instagram.com/hey_chuck_/" target="_blank"><img src="img/insta.png"></a>
-            <a href="mailto:sahninitesh01@gmail.com" target="_blank"><img src="img/email.png"></a>
+            <a href="https://www.facebook.com/nitesh.sahni.902" target="_blank"><img src="facebook.png"></a>
+            <a href="https://www.instagram.com/hey_chuck_/" target="_blank"><img src="insta.png"></a>
+            <a href="mailto:sahninitesh01@gmail.com" target="_blank"><img src="email.png"></a>
             
         </div>
 
@@ -125,6 +125,6 @@
         }
     }
 </script>
-<script src="js/bmi.js"></script>
-<script src="js/food.js"></script>
+<script src="bmi.js"></script>
+<script src="food.js"></script>
 </html>
